# ImageFilter

./: .gitignore  CMakeLists.txt  README.md
filter/: CMakeLists.txt  main.cpp
image/: CMakeLists.txt  cuda_image.cpp  cuda_image.h  float_image.cpp  float_image.h  image.cpp  image.h  jpeg_image.cpp  jpeg_image.h  lsmrBase.cpp  lsmrBase.h  lsmrWrapper.h  lsqrBase.cpp  lsqrBase.h  png_image.cpp  png_image.h
kernel/: CMakeLists.txt  cuda_memory.cu  cuda_memory.h  filter.cu  filter.h  helper.h  kernel.h  kernel_cu.h  lab2rgb.cu  lab2rgb.h  math.cu  math_kernel.h  rgb2lab.cu  rgb2lab.h  sample.cu  sample.h
libjpeg/: CMakeLists.txt
libpng/: CMakeLists.txt  pngtest.c  pngwrite.c
vc19/: ImageFilter.sln
vc19/filter/: filter.vcxproj  filter.vcxproj.filters
vc19/image/: image.vcxproj  image.vcxproj.filters
vc19/kernel/: kernel.vcxproj  kernel.vcxproj.filters
vc19/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
vc19/libpng/: libpng.vcxproj  libpng.vcxproj.filters
vc19/zlib/: zlib.vcxproj  zlib.vcxproj.filters
zlib/: CMakeLists.txt
